manifest/auth-srv.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobhuntly-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobhuntly-auth
  template:
    metadata:
      labels:
        app: jobhuntly-auth
    spec:
      containers:
      - image: abhinandidikayil/jobhuntly-auth:latest
        name: jobhuntly-auth
---
apiVersion: v1
kind: Service
metadata:
  name: jobhuntly-auth-srv
spec:
  selector:
    app: jobhuntly-auth
  ports:
  - protocol: TCP
    port: 2000
    targetPort: 2000
