manifest/chat-srv.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobhuntly-chat-depl
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobhuntly-chat
  template:
    metadata:
      labels:
        app: jobhuntly-chat
    spec:
      containers:
      - image: abhinandidikayil/jobhuntly-chat:latest
        name: jobhuntly-chat
---
apiVersion: v1
kind: Service
metadata:
  name: jobhuntly-chat-srv
spec:
  selector:
    app: jobhuntly-chat
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
