manifest/user-srv.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobhuntly-user-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobhuntly-user
  template:
    metadata:
      labels:
        app: jobhuntly-user
    spec:
      containers:
      - image: abhinandidikayil/jobhuntly-user:latest
        name: jobhuntly-user
---
apiVersion: v1
kind: Service
metadata:
  name: jobhuntly-user-srv
spec:
  selector:
    app: jobhuntly-user
  ports:
  - protocol: TCP
    port: 7000
    targetPort: 7000
