manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://jobhuntly-client.vercel.app"
spec:
  # ingressClassName: webapprouting.kubernetes.azure.com  for azure
  ingressClassName: nginx  # for digital ocean
  rules:
  - host: url.abhinand.buzz
    http:
      paths:
      - path: /api/v1/auth
        pathType: Prefix
        backend:
          service:
            name: jobhuntly-auth-srv
            port:
              number: 2000
      - path: /api/v1/chat
        pathType: Prefix
        backend:
          service:
            name: jobhuntly-chat-srv
            port:
              number: 3000
      - path: /socket.io
        pathType: ImplementationSpecific
        backend:
          service:
            name: jobhuntly-chat-srv
            port:
              number: 3000
      - path: /api/v1/company
        pathType: Prefix
        backend:
          service:
            name: jobhuntly-company-srv
            port:
              number: 4000
      - path: /company-socket/
        pathType: Prefix
        backend:
          service:
            name: jobhuntly-company-srv
            port:
              number: 4000
      - path: /api/v1/job
        pathType: Prefix
        backend:
          service:
            name: jobhuntly-job-srv
            port:
              number: 5000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: jobhuntly-notification-srv
            port:
              number: 6000
      - path: /api/v1/user
        pathType: Prefix
        backend:
          service:
            name: jobhuntly-user-srv
            port:
              number: 7000
    # Rule for IP-based access
  - http:
      paths:
        - path: /api/v1/auth
          pathType: Prefix
          backend:
            service:
              name: jobhuntly-auth-srv
              port:
                number: 2000
        - path: /api/v1/chat
          pathType: Prefix
          backend:
            service:
              name: jobhuntly-chat-srv
              port:
                number: 3000
        - path: /api/v1/company
          pathType: Prefix
          backend:
            service:
              name: jobhuntly-company-srv
              port:
                number: 4000
        - path: /api/v1/job
          pathType: Prefix
          backend:
            service:
              name: jobhuntly-job-srv
              port:
                number: 5000
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: jobhuntly-notification-srv
              port:
                number: 6000
        - path: /api/v1/user
          pathType: Prefix
          backend:
            service:
              name: jobhuntly-user-srv
              port:
                number: 7000
